<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="20sp"
        android:text="@string/title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/mostrar"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_message"
        android:layout_marginTop = "40dp"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <ImageView
        android:id="@+id/userImg"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/user"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toTopOf="@+id/message"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/message"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/mostrar" />

    <Button
        android:id="@+id/servicios_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_servicios"
        app:layout_constraintBottom_toTopOf="@+id/portafolio_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:layout_marginTop = "200dp"/>

    <Button
        android:id="@+id/portafolio_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_portafio"
        app:layout_constraintBottom_toTopOf="@+id/acerca_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/servicios_btn" />

    <Button
        android:id="@+id/acerca_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_acercade"
        app:layout_constraintBottom_toTopOf="@+id/contacto_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/portafolio_btn" />

    <Button
        android:id="@+id/contacto_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_contacto"
        app:layout_constraintBottom_toTopOf="@+id/redes_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/acerca_btn" />
    <Button
        android:id="@+id/redes_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_redes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contacto_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>